tests/ui/unsized/issue-71659.current.stderr
error: hi
  --> $DIR/issue-71659.rs:13:1
   |
LL | pub trait CastTo<T: ?Sized>: Unsize<T> {
   | -------------------------------------- built-in `dyn CastTo<_>` implementation for this trait
...
LL | impl<T: ?Sized, U: ?Sized + Unsize<T>> CastTo<T> for U {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error[E0277]: the trait bound `dyn Foo: CastTo<[i32]>` is not satisfied
  --> $DIR/issue-71659.rs:34:15
   |
LL |     let x = x.cast::<[i32]>();
   |               ^^^^ the trait `CastTo<[i32]>` is not implemented for `dyn Foo`
   |
note: required by a bound in `Cast::cast`
  --> $DIR/issue-71659.rs:23:15
   |
LL |     fn cast<T: ?Sized>(&self) -> &T
   |        ---- required by a bound in this associated function
LL |     where
LL |         Self: CastTo<T>,
   |               ^^^^^^^^^ required by this bound in `Cast::cast`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
